<resources>
    <string name="app_name">Price</string>
    <string name="title_activity_bottom__navigation_">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_price">Price</string>
    <string name="title_favorities">Fovirities</string>
    <string name="title_portfolio">Portfolio</string>
    <string name="title_news">News</string>
    <string name="title_invest">Invest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>